name:                xe
version:             0.1
synopsis:            Get FX rates from xe.com
description:         Get FX rates from xe.com
license:             AllRightsReserved
license-file:        LICENSE
author:              Alp Mestanogullari
maintainer:          alpmestan@gmail.com
copyright:           2015 Alp Mestanogullari
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable xe
  main-is:             Main.hs
  other-modules:       CLI, Types
  build-depends:
      base >=4.7 && <5
    , lens >= 4.6
    , optparse-applicative
    , taggy-lens
    , text
    , time >= 1.4
    , wreq >= 0.3
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2
